# agent-context-mcp

./: Cargo.toml  README.md  config.example.toml  hook-template.sh
.cargo/: config.toml
.github/workflows/: ci.yml  darwin-arm64-build.yml  release.yml
docker/: milvus-compose.yml
docs/: mcp-clients.md  milvus.md  providers.md  quickstart-macos.md  troubleshooting.md
docs/implementation-plans/: mixed-embedding-profiles-per-repo.md
packaging/homebrew/: agent-context.rb
scripts/: update-homebrew-formula.mjs
src/: config.rs  main.rs  mcp_server.rs  snapshot.rs
src/commands/: doctor.rs  init.rs  install_hook.rs  install_launchd.rs  list_tools.rs  mod.rs  print_mcp_config.rs  prune_stale_vector_collections.rs  refresh_all.rs  refresh_one.rs  reindex_all.rs  release_vector_collections.rs  reset_local_state.rs  search.rs  serve.rs  support.rs  uninstall_launchd.rs
src/engine/: embedding.rs  freshness.rs  lexical.rs  live_files.rs  milvus.rs  mod.rs  splitter.rs  symbols.rs
