[package]
name = "agent-context"
version = "0.1.6"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "signal", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
toml = "0.8"
shellexpand = "3"
axum = { version = "0.8", features = ["http1", "tokio"], default-features = false }
rmcp = { version = "1.5.0", features = ["server", "transport-streamable-http-server", "schemars"] }
tokio-util = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
futures = "0.3"
globset = "0.4"
ignore = "0.4"
libc = "0.2"
md5 = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
schemars = { version = "1.2.1", features = ["derive"] }
tantivy = "0.22"
text-splitter = { version = "0.29", features = ["code", "markdown"] }
tree-sitter = "0.26"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-python = "0.25.0"
tree-sitter-php = "0.24.2"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.2"
tree-sitter-scala = "0.26.0"
tree-sitter-swift = "0.7.1"
tree-sitter-typescript = "0.23.2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[profile.release]
lto = "thin"
strip = "symbols"
